--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -31,7 +31,9 @@
                 <input type="password"  name="password" minlength="6">
             </div>
         </div>
-        
+        <input type="text"  name="full_name">
+        <input type="text"  name="username">
+        <input type="text"  name="bio" minlength = "279">
         <!-- Button -->
         <div>
             <input type="submit"/>
